chore: version updates
Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>